<resources>
    <string name="app_name">Golden Beach Hotel Management System</string>
    <string name="hotel_name">Golden Beach Hotel</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="addNewBooking">Add New Booking</string>
    <string name="check_in_check_out">Check in / Check Out</string>
    <string name="view_check_ins">View Check Ins</string>
    <string name="view_check_outs">View Check Outs</string>
    <string name="roomService">Room Service</string>
    <string name="roomManagement">Room Management</string>
    <string name="staff">Staff</string>
    <string name="addNewStaff">Add New Staff</string>
    <string name="editStaff">Edit Staff</string>
    <string name="showing_bookings_for">Showing bookings for :</string>
    <string name="change">Change</string>
    <string name="welcome_message">Welcome, </string>
    <string name="floor">Floor:</string>
    <string name="room">Room:</string>
    <string name="availability">Availability:</string>
    <string name="type_of_room">Type of Room:</string>
    <string name="room_status">Room Status:</string>
    <string name="room_service">Room Service:</string>
    <string name="customer">Customer:</string>
    <string name="cleaning_status">Cleaning Status:</string>
    <string name="request">REQUEST CLEANING</string>
    <string name="customer_details">Customer Details</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="ic">IC:</string>
    <string name="contact_no">Contact No:</string>
    <string name="email">Email:</string>
    <string name="booking_details">Booking Details</string>
    <string name="no_of_guest">No of Guest:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="other_guest">Other Guests Name:</string>
    <string name="hotel_meals">Hotel Meals</string>
    <string name="total">Total:</string>
    <string name="add_button_text">ADD</string>
    <string name="food"><u>Food</u></string>
    <string name="categoryimage">categoryImage</string>
    <string name="drink"><u>Drink</u></string>
    <string name="pick_a_date">Pick a Date</string>
    <string-array name="type_of_room">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>Triple Room</item>
        <item>Quad Room</item>
    </string-array>
    <string-array name="type_of_position">
        <item>Staff</item>
        <item>Manager</item>
    </string-array>
    <string-array name="floor_num">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="title_activity_room_service_items">RoomServiceItems</string>
    <!-- Strings used for fragments for navigation -->
    <string name="required_error">This is a required field</string>
    <string name="other_guest_error">Please enter other guest(s) name</string>
    <string name="order_menu">Order Menu</string>
    <string name="alphabet_error">Please enter only alphabet</string>
    <string name="phone_error">Enter in 0123456789 format</string>
    <string name="ic_error">Invalid IC format: 123456-12-1234</string>
    <string name="less_than_today_error">Start date must not less than today\'s date</string>
    <string name="less_than_from_error">Start date must not less than start date</string>
    <string name="btnSearch">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="effective_date">Effective Date:</string>
    <string name="booking_date">Booking Date:</string>
    <string name="cust_name">Name:</string>
    <string name="default_price">RM 0.00</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name:</string>
    <string name="dob">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="address">Address:</string>
    <string name="position">Position:</string>
    <string name="title_activity_booking_details">Booking Details</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="status">Status:</string>
    <string name="password">Create Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="staffDetails">Staff Personal Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="register">Register</string>
    <string name="create_acc">Create Account</string>
    <string name="password_format_error">Password must contains >6 characters, at least a letter and a number</string>
    <string name="password_not_match">Passwords are not the same</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="dobError">DOB must not more than today date</string>
    <string name="totalRoomService">Total Room Service:</string>
    <string name="totalRoom">Total Room:</string>
</resources>
