<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homesidemenu"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_material_account_circle"
            android:title="@string/profile" />
    </group>

    <item
        android:title="@string/booking">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_booking"
                    android:icon="@drawable/bookingsidemenu"
                    android:title="@string/booking" />
                <item
                    android:id="@+id/nav_addNewbooking"
                    android:title="@string/addNewBooking" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/check_in_check_out">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_checkInOut"
                    android:icon="@drawable/checkin_checkoutsidemenu"
                    android:title="@string/check_in_check_out" />
                <item
                    android:id="@+id/nav_checkIn"
                    android:title="@string/check_in" />
                <item
                    android:id="@+id/nav_checkOut"
                    android:title="@string/check_out" />
            </group>
        </menu>
    </item>

    <item android:title="@string/roomManagement">
        <menu>
            <item
                android:id="@+id/nav_roomManagement"
                android:icon="@drawable/roommanagementsidebar"
                android:title="@string/roomManagement" />
        </menu>
    </item>

    <item android:title="@string/roomService">
        <menu>
            <item
            android:id="@+id/nav_roomService"
            android:icon="@drawable/roomservicesidemenu"
            android:title="@string/roomService" />
        </menu>
    </item>

    <item
        android:title="@string/staff">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_staff"
                    android:icon="@drawable/staffsidemenu"
                    android:title="@string/staff" />
                <item
                    android:id="@+id/nav_addNewStaff"
                    android:title="@string/addNewStaff" />
                <item
                    android:id="@+id/nav_editStaff"
                    android:title="@string/editStaff" />
            </group>
        </menu>
    </item>
</menu>