<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewBooking"
    android:id="@+id/addNewBoookingDL">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/include"
            layout="@layout/toolbar_top" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearProgress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible">
            <ProgressBar
                android:layout_width="200dp"
                android:layout_height="100dp"
                />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            android:layout_marginTop="50dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_details"
                    android:textAppearance="@style/palaBoldBrownText"
                    android:textSize="28dp"
                    android:layout_marginTop="0dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtFirstName"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    app:errorEnabled="true"
                    android:textAppearance="@style/errorText">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:textSize="16dp"
                        android:backgroundTint="@android:color/transparent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLastName"
                    android:layout_toEndOf="@id/txtFirstName"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    app:errorEnabled="true"
                    android:textAppearance="@style/errorText">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:textSize="16dp"
                        android:backgroundTint="@android:color/transparent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtIC"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="130dp"
                    app:errorEnabled="true"
                    app:counterMaxLength="14"
                    android:textAppearance="@style/errorText">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/ic"
                        android:inputType="text"
                        android:textSize="16dp"
                        android:maxLength="14"
                        android:backgroundTint="@android:color/transparent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPhone"
                    android:layout_toEndOf="@id/txtIC"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="130dp"
                    app:errorEnabled="true"
                    app:counterMaxLength="1"
                    android:textAppearance="@style/errorText">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_no"
                        android:inputType="phone"
                        android:textSize="16dp"
                        android:maxLength="11"
                        android:backgroundTint="@android:color/transparent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEmail"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="210dp"
                    app:errorEnabled="true"
                    android:textAppearance="@style/errorText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@style/palaBrownText"
                        android:textSize="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSearchCust"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="230dp"
                    android:layout_toEndOf="@+id/txtEmail"
                    android:backgroundTint="@color/button_color_green"
                    android:text="@string/btnSearch"
                    android:onClick="btnSearchOnClick"
                    android:textColor="@color/white"
                    />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="320dp"
                    android:text="@string/booking_details"
                    android:textAppearance="@style/palaBoldBrownText"
                    android:textSize="28dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_room"
                    android:layout_marginTop="370dp"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"/>
                <Spinner
                    android:id="@+id/typeOfRoomSpinner"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="400dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/dropdown_style"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_guest"
                    android:layout_marginTop="370dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/typeOfRoomSpinner"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"/>
                <Spinner
                    android:id="@+id/numOfGuestSpinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="400dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/typeOfRoomSpinner"
                    android:background="@drawable/dropdown_style"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:layout_marginTop="435dp"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_date"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/button_color_green"
                    android:layout_marginTop="505dp"
                    android:onClick="btnFromOnClick"
                    android:layout_marginStart="10dp"
                    android:id="@+id/btnFrom"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:layout_marginTop="435dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/txtIC"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/btnTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="505dp"
                    android:layout_toEndOf="@+id/txtIC"
                    android:backgroundTint="@color/button_color_green"
                    android:text="@string/pick_a_date"
                    android:onClick="btnToOnClick"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtBtnFrom"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="470dp"
                    android:text="@string/pick_a_date"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_date"
                    android:id="@+id/txtBtnTo"
                    android:layout_marginTop="470dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/txtIC"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtOthers"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="550dp"
                    app:errorEnabled="true"
                    android:textAppearance="@style/errorText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="top|left"
                        android:hint="@string/other_guest"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:enabled="false"
                        android:textAppearance="@style/palaBrownText"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="680dp"
                    android:text="@string/hotel_meals"
                    android:layout_marginStart="10dp"
                    android:id="@+id/cbxMeal"
                    android:textAppearance="@style/palaBrownText"
                    android:enabled="false"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_marginTop="690dp"
                    android:layout_marginStart="90dp"
                    android:layout_toEndOf="@+id/cbxMeal"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_price"
                    android:id="@+id/txtTotal"
                    android:layout_marginTop="730dp"
                    android:layout_marginStart="90dp"
                    android:layout_toEndOf="@+id/cbxMeal"
                    android:textAppearance="@style/palaBrownText"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/btnAddBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="760dp"
                    android:layout_toEndOf="@+id/cbxMeal"
                    android:backgroundTint="@color/button_color_green"
                    android:text="@string/add_button_text"
                    android:onClick="btnAddOnClick"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>