<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/showing_bookings_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="Showing check-outs on:"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cur_view_check_outs_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/change_button"
        app:layout_constraintTop_toBottomOf="@id/showing_bookings_for"
        tools:text="21 February 2021" />

    <Button
        android:id="@+id/change_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:text="@string/change"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/cur_view_check_outs_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cur_view_check_outs_date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_button"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:id="@+id/check_out_table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:background="@color/button_color_green"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="@string/customer_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="Room Type" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/room" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/status" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="12dp"
            android:background="@color/item_background_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_in_table_header">

            <TableLayout
                android:id="@+id/check_out_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>